2009-02-28 Raphael Neider <rneider AT web.de>

	* device/include/pic16/signal.h: avoid multiline inline
	  assembler statements in macros, addresses #2644965

2009-02-27 Raphael Neider <rneider AT web.de>

	* device/include/pic16/pic18f[24][3456]k20.h,
	  device/include/pic16/pic18f[68][567]j50.h,
	  device/include/pic16/pic18f[68]6j55.h,
	  device/lib/pic16/libdev/pic18f[24][3456]k20.c,
	  device/lib/pic16/libdev/pic18f[68][567]j50.c,
	  device/lib/pic16/libdev/pic18f[68]6j55.c,
	  device/include/pic16/pic18fregs.h,
	  device/include/pic16/pic16devices.txt,
	  device/lib/pic16/pics.all,
	  device/lib/pic16/libdev/Makefile.am,
	  device/lib/pic16/libio/Makefile.am: added/re-enabled many device
	  families (87j50 family contributed by Robert Wuest)

	* device/include/pic16/adc.h,
	  device/lib/pic16/libio/adc/adcbusy.c,
	  device/lib/pic16/libio/adc/adcclose.c,
	  device/lib/pic16/libio/adc/adcconv.c,
	  device/lib/pic16/libio/adc/adcopen.c,
	  device/lib/pic16/libio/adc/adcsetch.c: added 65j50-style ADC

	* doc/sdccman.lyx: updated list of supported devices, fixed typo
	* device/lib/pic16/Makefile.common: do not suppress assembler warnings

	* device/lib/pic16/Makefile.in,
	  device/lib/pic16/libm/Makefile.in,
	  device/lib/pic16/debug/Makefile.in,
	  device/lib/pic16/libio/Makefile.in,
	  device/lib/pic16/startup/Makefile.in,
	  device/lib/pic16/libsdcc/Makefile.in,
	  device/lib/pic16/libdev/Makefile.in,
	  device/lib/pic16/libc/Makefile.in: regenerated

2009-02-27 Borut Razem <borut.razem AT siol.net>

	* as/z80/asexpr.c, as/z80/z80mch.c: re-fixed bugs
	  #1829678 and #1704376 in the way proposed by Alan Baldwin

2009-02-23 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* device/include/mcs51/at89c51ed2.h: Fixed address of SFR P5. Thanks
	  to Steve Qu for the fix.

2009-02-23 Borut Razem <borut.razem AT siol.net>

	* as/z80/asexpr.c: fixed bug #1829678: Z-80 CP A,<xxx> assembly
	  it is already fixed for mcs51 and hc08 targets